anather line added

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
                 <img src="money.png" alt="">
             </div>
         </div>
-        <div>
-            <div class="mt-4 text-center">
+        <div class="text-center">
+            <div class="mt-4">
                 <h2 class="text-2xl font-semibold mb-4">Income</h2>
                 <label class="text-xl font-normal" for="">Income: </label>
                 <input id="income-field" class=" px-4 py-2 rounded " type="text" placeholder="$ Your monthly income">
